# unisim

./: .gitignore  README.md  main.py  pyproject.toml
example/: agents.py  model.py
example/stablecoin_run/: README.md  usdc_dia.ipynb  usdc_dia_10000_500.avro
snapshots/: base.json
tests/: conftest.py  test_dex.py  test_liquidity.py  test_pool.py  test_snapshot.py
unisim/: dex.py  pool.py  snapshot.py  utils.py
unisim/abis/: NonFungPosition.abi  PoolToken.json  __init__.py
