[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unisim"
version = "0.1.0"
description = 'API to model Uniswap pools'
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Dave Bryson", email = "davebryson@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "matplotlib>=3.8.2",
  "hvplot",
  "pyarrow",
  "simular-evm>=0.2.6",
  "mesa>=2.2.4",
  "jupyter>=1.0.0",
  "scipy>=1.13.0",
  "tqdm>=4.66.2",
  "polars",
  "seaborn",
]

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
